# claweval

./: .gitignore  PHASE2.md  POST_RUN_FIXES.md  PRD.md  README.md  config.yaml.example  pyproject.toml  run-claweval.sh  run_all.sh
claweval/: __init__.py  __main__.py  cli.py  config.py  context_stress.py  judge.py  mock_tools.py  multi_turn.py  reporter.py  runner.py  scorer.py  task_loader.py
claweval/tasks/coding/: 004_refactor_async.yaml  005_dockerfile.yaml  006_multi_file_refactor.yaml  007_debug_race_condition.yaml  008_caching_decorator.yaml  009_port_python_to_typescript.yaml  (+6 more)
docs/: dashboard_2026-03-23T23-03-44Z.html  index.html
tasks/coding/: 001_fastapi_endpoint.yaml  002_fix_bug.yaml  003_write_tests.yaml
tasks/memory/: 001_fact_recall.yaml  002_instruction_following.yaml  003_entity_tracking.yaml  005_multi_step_instructions.yaml
tasks/reasoning/: 002_logic_puzzle.yaml  005_temporal_reasoning.yaml
tasks/research/: 001_factual_question.yaml  002_technology_comparison.yaml  003_structured_extraction.yaml  004_fact_check.yaml
tasks/speed/: 001_short_response.yaml  002_list_generation.yaml  003_code_generation.yaml  004_long_explanation.yaml  005_structured_output.yaml
tasks/tool_calling/: 002_web_search.yaml  004_tool_selection.yaml
tasks/writing/: 001_email_reply.yaml  002_status_update.yaml  004_api_error_messages.yaml  005_audience_rewrite.yaml
tests/: test_cli.py  test_config.py  test_context_stress.py  test_judge.py  test_mock_tools.py  test_multi_turn.py  test_reporter.py  test_runner.py  test_scorer.py  test_task_loader.py
(+61 files in other folders)
